# GL_Paint

./: .gitignore  README.md  intro-targets.json  meson.build
Distribution/Linux/: GL_Paint
res/: Basic.shader
src/: Window.cpp  Window.h  functions.cpp  functions.h  main.cpp  meson.build  paint_area.h  shapes.cpp  shapes.h  variables.h
src/opengl/: helpers.cpp  helpers.h  indexBuffer.cpp  indexBuffer.h  main.cpp  meson.build  renderer.cpp  renderer.h  shader.cpp  shader.h  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBufferLayout.h
